# SkillScout

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/rules/: coderabbit-before-pr.md  rust-no-silent-failures.md  rust-no-unwrap-in-commands.md  rust-serde-no-default-on-required.md  rust-spawn-blocking-for-io.md  rust-validate-user-paths.md  vue-collision-safe-ids.md  vue-extract-reusable-components.md  vue-invoke-through-api-layer.md  vue-no-optimistic-state-without-rollback.md  vue-no-silent-catch.md
.cursor/rules/: rust-no-silent-failures.mdc  rust-no-unwrap-in-commands.mdc  rust-serde-no-default-on-required.mdc  rust-spawn-blocking-for-io.mdc  rust-validate-user-paths.mdc  vue-collision-safe-ids.mdc  vue-extract-reusable-components.mdc  vue-invoke-through-api-layer.mdc  vue-no-optimistic-state-without-rollback.mdc  (+1 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: release-please-config-beta.json  release-please-config.json
src/: App.vue  api.ts  router.ts  styles.css  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.beta.json  tauri.conf.json  test_keyring.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: auth.rs  github.rs  items.rs  mod.rs  state.rs  sync.rs
src-tauri/src/github/: api.rs
src-tauri/src/utils/: auth.rs  filesystem.rs  mod.rs
worker/: package-lock.json  package.json  wrangler.jsonc  wrangler.toml
(+47 files in other folders)
