[package]
name = "skillscout"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "skillscout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
dotenvy = "0.15"
keyring = "3"
base64 = "0.22.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sha2 = "0.11.0"
hex = "0.4.3"
tokio = { version = "1.52.3", features = ["time"] }
futures = "0.3.31"
